# ml-cpp

./: .clang-format  .gitignore  CMakeLists.txt  add_new_model.sh  format.sh  log.txt  vcpkg.json  workspace.code-workspace
app/: CMakeLists.txt  main.cpp
app/src/: main.cc
cmake/: folders.cmake  init.cmake  targets.cmake
lib/KMEANS/: CMakeLists.txt
lib/KMEANS/example/: CMakeLists.txt
lib/KMEANS/example/inc/: main.hh
lib/KMEANS/inc/: kmeans.hh
lib/KMEANS/src/: kmeans.cc
lib/KMEANS2/example/src/: main.cc
lib/KNN/: CMakeLists.txt
lib/KNN/example/: CMakeLists.txt
lib/KNN/example/src/: main.cc
lib/KNN2/example/: CMakeLists.txt
lib/KNN2/inc/: knn.hh
lib/NEURAL_NETWORK/: CMakeLists.txt
lib/NEURAL_NETWORK/example/: CMakeLists.txt
lib/NEURAL_NETWORK/example/src/: main.cc
lib/NEURAL_NETWORK/inc/: layer.hh  network.hh  neuron.hh
lib/NEURAL_NETWORK/src/: layer.cc  network.cc  neuron.cc
lib/dataHandler/: CMakeLists.txt  CmakeLists.txt
lib/dataHandler/inc/: data.hh  data_handler.hh
lib/dataHandler/src/: data.cc  data_handler.cc  data_handler.cpp
lib/data_model/: CMakeLists.txt
lib/data_model/inc/: common.hh  data.hh
lib/data_model/src/: common.cc  data.cc
lib/iris/: CMakeLists.txt
lib/iris/inc/: iris_handler.hh
lib/iris/src/: iris_handler.cc
lib/k-means/: CMakeLists.txt
lib/k-means/inc/: k-means.hh
lib/knn/: CMakeLists.txt
lib/knn/inc/: knn.hh
lib/knn/src/: knn.cc
lib/mnist/: CMakeLists.txt
lib/mnist/inc/: mnist_handler.hh
lib/mnist/src/: mnist_handler.cc
lib/thread_queue/: CMakeLists.txt
lib/thread_queue/inc/: thread_queue.hh
